refactor: remove cat-branch-point and store target branch in STATE.md
Remove all cat-branch-point references from Java source, plugin skills, tests,
and session instructions. Centralize worktree detection into
GitCommands.isCatWorktreeGitDir(). Store target branch name in STATE.md
(version-controlled, pushed to remote) instead of local marker files.
WorkPrepare writes Target Branch field at worktree creation. Cleanup skill
reads it from STATE.md for git branch --merged check.